--- a/src/style/Banner.css
+++ b/src/style/Banner.css
@@ -2,9 +2,12 @@
   color: white;
   object-fit: contain;
   height: 448px;
+  position: relative;
 }
 
 .banner_contents {
+  position: absolute;
+  bottom: 0;
   padding: 20px;
 }
 
@@ -21,7 +24,9 @@
 }
 
 .banner_fade_bottom {
-  height: 15.4rem;
+  position: absolute;
+  bottom: 0;
+  height: 9.4rem;
   background-image: linear-gradient(
     180deg,
     transparent,
