--- a/src/style/Banner.css
+++ b/src/style/Banner.css
@@ -16,11 +16,11 @@
 }
 
 .banner_description {
-  width: 45rem;
+  width: 100%; /* Adjust width for responsiveness */
+  max-width: 45rem;
   line-height: 1.3;
   padding-top: 1rem;
   font-size: 1rem;
-  max-width: 360px;
 }
 
 .banner_fade_bottom {
