--- a/src/style/Banner.css
+++ b/src/style/Banner.css
@@ -16,9 +16,9 @@
 }
 
 .banner_description {
-  width: 100%; /* Adjust width for responsiveness */
+  width: 75%;
   max-width: 45rem;
-  line-height: 1.3;
+  line-height: 1.5;
   padding-top: 1rem;
   font-size: 1rem;
 }
